feat: dev branch created

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,15 +4,15 @@
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #111111;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #111111;
+    --foreground: #ffffff;
   }
-}
+} */
 
 body {
   color: var(--foreground);
