--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,58 @@
   }
 } */
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+:root {
+  --background: #ffffff;
+  --foreground: #111111;
+}
+
+/* @media (prefers-color-scheme: dark) {
+  :root {
+    --background: #111111;
+    --foreground: #ffffff;
+  }
+} */
+
+@layer base {
+  .btn {
+    @apply border border-primary px-6 h-[40px] rounded-full relative overflow-hidden;
+  }
+
+  .btn span {
+    @apply relative z-[2] h-full flex items-center;
+  }
+
+  .btn span div {
+    @apply transition-transform duration-500;
+  }
+
+  .btn span div:nth-child(1) {
+    @apply absolute top-0 left-0 w-full h-full flex items-center justify-center transform translate-y-0;
+  }
+
+  .btn:hover span div:nth-child(1) {
+    @apply -translate-y-full;
+  }
+
+  .btn span div:nth-child(2) {
+    @apply absolute top-0 left-0 w-full h-full flex items-center justify-center transform translate-y-full;
+  }
+
+  .btn:hover span div:nth-child(2) {
+    @apply translate-y-0;
+  }
+}
+
+body {
+  color: var(--foreground);
+  background: var(--background);
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
