--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,8 +66,8 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+* {
+  scrollbar-width: thin;
+  scroll-behavior: smooth;
+
 }
