--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,7 +32,7 @@
 
 @layer base {
   .btn {
-    @apply border border-primary px-6 h-[40px] rounded-full relative overflow-hidden;
+    @apply border border-primary h-[40px] rounded-full relative overflow-hidden;
   }
 
   .btn span {
@@ -69,5 +69,4 @@ body {
 * {
   scrollbar-width: thin;
   scroll-behavior: smooth;
-
 }
